<resources>
    <string name="app_name">MyKotlinBank</string>
    <string name="welcome">Bienvenido a MyKotlinBank</string>
    <string name="question">¿Que deseas hacer?</string>
    <string name="verSaldo">Ver tú Saldo</string>
    <string name="depositar">Depositar</string>
    <string name="retirar">Retirar</string>
    <string name="exit">Cerrar Sesion</string>
    <string name="ok">Ok</string>
    <string name="bye">Gracias por usar Kotlin Bank!</string>
    <string name="option">Selecciona una opción</string>
    <string name="signo">$</string>
    <string name="hide">Ocultar Saldo[OFF]</string>
</resources>