<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/txAmount"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tbHead"
        android:layout_width="420dp"
        android:layout_height="99dp"
        android:background="#2196F3"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="379dp"
        android:layout_height="56dp"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/tbHead"
        app:layout_constraintEnd_toEndOf="@+id/tbHead"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="@+id/tbHead"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tvQuestion"
        android:layout_width="381dp"
        android:layout_height="34dp"
        android:text="@string/question"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.433"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tbHead"
        app:layout_constraintVertical_bias="0.073" />

    <RadioGroup
        android:id="@+id/rg"
        android:layout_width="181dp"
        android:layout_height="231dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.082"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.404">

        <RadioButton
            android:id="@+id/rbSaldo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/verSaldo"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rbDepositar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/depositar"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rbRetirar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/retirar"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rbExit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exit"
            android:textSize="20sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/tvInfo"
        android:layout_width="388dp"
        android:layout_height="40dp"
        android:layout_marginTop="17dp"
        android:text="@string/option"
        android:textColor="@color/green"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.26"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rg"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/etnAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:textSize="20sp"
        android:hint="0"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.721"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvInfo"
        app:layout_constraintVertical_bias="0.153"

        />

    <TextView
        android:id="@+id/txSigno"
        android:layout_width="47dp"
        android:layout_height="45dp"
        android:text="@string/signo"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/etnAmount"
        app:layout_constraintHorizontal_bias="0.846"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvInfo"
        app:layout_constraintVertical_bias="0.161" />

    <Button
        android:id="@+id/btOk"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etnAmount"
        app:layout_constraintVertical_bias="0.373" />

    <Switch
        android:id="@+id/swSaldo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hide"
        android:textColor="@color/red"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/tvInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.604"
        app:layout_constraintStart_toEndOf="@+id/rg"
        app:layout_constraintTop_toBottomOf="@+id/tvQuestion"
        app:layout_constraintVertical_bias="0.959" />

</androidx.constraintlayout.widget.ConstraintLayout>